--- a/articles/af2b2b9f8fd890.md
+++ b/articles/af2b2b9f8fd890.md
@@ -100,7 +100,7 @@ someNumbers.add 3 # otherがダングリングポインタを持っている
 
 この問題を解決するためには、いくつかの解決策があります。
 1つめはコンテナ内の要素をディープコピーすることで、これはC++がやっていることであり、通常のNimのセマンティクスでもあります。
-2つめはポインタへのポインタを用意して新しい更新を受け取れるようにすることで、これはJavaやC#で行われています。しかしこれはかなり効率が悪く、別の間接処理が発生するからです。
+2つめはポインタへのポインタを用意して新しい更新を受け取れるようにすることで、これはJavaやC#で行われています。しかしこれは別の間接処理が発生するため、かなり効率が悪いです。
 3つめはこれは代入なんだけど、悪い代入だから禁止してしまおう、ということも可能です。
 4つめの解決策は、先ほど言ったように、ガベージコレクタにこの悪いポインタを掃除してもらうか、他の変数がそれを参照していない場合のみ、そのポインタを掃除してもらうことです。
 最後は、メモリブロックを盗んで移動させることができますし、これはC++でも可能です。（訳者注：C++でのムーブのこと。std::move）
@@ -211,7 +211,7 @@ tab.put("key", values)
 ```
 ここで1つの解決策は、それを移動させることです。
 このハッシュテーブルに埋め込む前に値をechoしておけば、コンパイラはechoが値の所有権を持ちたくないと知っているので、うまくいくはずです。
-tab.putはsinkアノテーションのおかげで、valuesがその後で呼び出されないことがわかっています。
+`tab.put`はsinkアノテーションのおかげで、valuesがその後で呼び出されないことがわかっています。
 もちろん、これは一つの解決策で、デバッグのためにコードを追加するだけなら、コピーが増えようが増えまいが気にする必要はないでしょう。なぜなら、このコードはその後すぐに削除されるからです。
 
 ## Sinkのその他の例
@@ -262,7 +262,7 @@ func get[K, V](t:Table[K, V]; key: K): V =
   var h = hash(key)
   result = move(t.slots[h]) # コンパイルエラー
 ```
-このソースをムーブさせようとすると、コンパイラはTはミュータブルでなく、ムーブはこの大元(変数t)を変異させるから、ムーブできない、と文句を言うでしょう。
+このソースをムーブさせようとすると、コンパイラはTはミュータブルでなく、ムーブはこの大元(変数`t`)を変異させるから、ムーブできない、と文句を言うでしょう。
 
 ## ゲッター：値の借用（3）
 ```nim
