--- a/articles/efffa86d9177b1.md
+++ b/articles/efffa86d9177b1.md
@@ -20,7 +20,12 @@ https://nim-lang.org/blog/2020/12/08/introducing-orc.html
 
 バージョン1.4では、いわゆるORCメモリ管理アルゴリズムが同梱されています。ORCは、既存のARCアルゴリズム（バージョン1.2で初搭載）にサイクルコレクタを追加したものです。名前の由来もそこからで、「O」はサイクルを、「RC」は「参照カウント」を表し、このアルゴリズムの基礎となっています。
 
-サイクルコレクタは、Linsらによるかなり有名な「trial deletion」アルゴリズムがベースになっています。このアルゴリズムがどのように機能するかはここでは説明しません。良い説明は論文を調べてください。
+サイクルコレクタは、Linsらによるかなり有名な「trial deletion」アルゴリズムがベースになっています。このアルゴリズムがどのように機能するかはここでは説明しません。良い説明は論文を読んでください。
+
+> ※訳者注：
+> 原文にある論文へのURLはリンク切れになっていた。"Bacon01Concurrent"という論文なのだが、このアルゴリズムはPHPにも入っているようで、こちらのスライドでこのアルゴリズムについて見ることができる。
+> https://www.slideshare.net/y-uti/php-gc
+
 
 いつものように、私はこのアルゴリズムを改良し、より多くの最適化を加えたいという誘惑に抗えませんでした。Nimコンパイラは関係する型を分析し、潜在的に循環参照になっている場合のみ、サイクルコレクタを呼び出すコードを生成します。この型解析は、型に`asyclic` と注釈をつけることで助けられています。例えば、2分木は次のようにモデル化されます。
 
