--- a/articles/efffa86d9177b1.md
+++ b/articles/efffa86d9177b1.md
@@ -1,5 +1,5 @@
 ---
-title: "Nimのメモリ管理を理解する③ ― ORC - アルゴリズムによるアドバンテージ"
+title: "Nimのメモリ管理を理解する④ ― ORC - アルゴリズムによるアドバンテージ"
 emoji: "👑"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["nim"]
