--- a/articles/af2b2b9f8fd890.md
+++ b/articles/af2b2b9f8fd890.md
@@ -16,6 +16,7 @@ https://www.youtube.com/watch?v=yA32Wxl59wo
 
 〜Nimのメモリ管理を理解するシリーズ〜
 - [Nimのメモリ管理を理解する① ― Nimの新しいGC、ARCについて](https://qiita.com/dumblepy/items/be660c17556d73aa3570)
+- [Nimのメモリ管理を理解する② ― Nimのムーブセマンティクス](https://zenn.dev/dumblepy/articles/af2b2b9f8fd890)
 
 ---
 
