--- a/articles/efffa86d9177b1.md
+++ b/articles/efffa86d9177b1.md
@@ -82,7 +82,7 @@ waitFor server.serve(Port(8080), cb)
 |Transfer/sec|1.48 MB|13.80 KB|
 |Max memory|137 MiB|153 MiB|
 
-M&Sはスループットでは勝っているが、レイテンシでは勝っていない。しかし、メモリ消費量は約330MBに増加し、プログラムが実際に必要とするメモリの2倍以上になってしまいました。
+M&Sはスループットでは勝っているが、レイテンシでは勝っていません。しかし、メモリ消費量は約330MBに増加し、プログラムが実際に必要とするメモリの2倍以上になってしまいました。
 
 ORCはレイテンシとメモリ消費量において常に優位に立ち、デストラクタとうまく協調し、したがってカスタムメモリ管理もうまくいき、ヒープサイズに依存せず、スタックルートを正確に追跡し、C/C++エコシステムが提供するすべてのサニタイザでクリーンに動作します。
 
