--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -200,7 +200,6 @@ import
 
 let rdb* = dbOpen(PostgreSQL, "db_name", "user", "pass", "db_host", 5432, 20, 30, true, false)
 
-
 randomize()
 
 # マイグレーション
@@ -250,7 +249,7 @@ main()
 
 コンパイルエラーになる
 ```sh
-DB_POSTGRES=true nim c --threads:on --gc:orc -r main
+DB_POSTGRES=true nim c -r --threads:on --mm:orc -d:useMalloc -d:useRealtimeGC main
 
 > main.nim(9, 13) Error: 'thread' is not GC-safe as it performs an indirect call here
 ```
