--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -230,7 +230,8 @@ import
 proc thread(nThread:int) {.thread.} =
   (proc() {.async.} =
     for i in 1..3:
-      echo rdb.table("hello").first().await
+      let res = rdb.table("hello").find(i+1).await.get
+      echo &"スレッド{nThread} {i}回目 {res}"
   )().waitFor
 
 
@@ -270,7 +271,9 @@ import
 proc thread(nThread:int:int) {.thread.} =
   (proc() {.async.} =
     for i in 1..3:
-+     {.gcsafe.}: echo rdb.table("hello").first().await
++     {.gcsafe.}:
+        let res = rdb.table("hello").find(i+1).await.get
+        echo &"スレッド{nThread} {i}回目 {res}"
   )().waitFor
 
 
@@ -363,16 +366,19 @@ import
   std/asyncdispatch,
   std/json,
 + std/locks,
+  std/options,
   std/osproc,
+  std/strformat,
   allographer/query_builder,
   ./environment
 
-proc thread(nThread:int:int) {.thread.} =
+proc thread(nThread:int) {.thread.} =
   (proc() {.async.} =
     for i in 1..3:
 +     withLock(L):
-        echo &"スレッド{nThread} {i}回目"
-+       {.gcsafe.}: echo rdb.table("hello").find(i+1).await
+        {.gcsafe.}:
+          let res = rdb.table("hello").find(i).await.get
+          echo &"スレッド{nThread} {i}回目 {res}"
   )().waitFor
 
 
@@ -391,30 +397,18 @@ main()
 ```
 
 ```sh: 出力
-スレッド1 1回目
-{"id":2,"randomnumber":36}
-スレッド1 2回目
-{"id":3,"randomnumber":4355}
-スレッド1 3回目
-{"id":4,"randomnumber":39}
-スレッド3 1回目
-{"id":2,"randomnumber":36}
-スレッド3 2回目
-{"id":3,"randomnumber":4355}
-スレッド3 3回目
-{"id":4,"randomnumber":39}
-スレッド2 1回目
-{"id":2,"randomnumber":36}
-スレッド2 2回目
-{"id":3,"randomnumber":4355}
-スレッド2 3回目
-{"id":4,"randomnumber":39}
-スレッド4 1回目
-{"id":2,"randomnumber":36}
-スレッド4 2回目
-{"id":3,"randomnumber":4355}
-スレッド4 3回目
-{"id":4,"randomnumber":39}
+スレッド1 1回目 {"id":1,"randomnumber":2}
+スレッド1 2回目 {"id":2,"randomnumber":36}
+スレッド1 3回目 {"id":3,"randomnumber":4355}
+スレッド3 1回目 {"id":1,"randomnumber":2}
+スレッド4 1回目 {"id":1,"randomnumber":2}
+スレッド4 2回目 {"id":2,"randomnumber":36}
+スレッド4 3回目 {"id":3,"randomnumber":4355}
+スレッド2 1回目 {"id":1,"randomnumber":2}
+スレッド2 2回目 {"id":2,"randomnumber":36}
+スレッド2 3回目 {"id":3,"randomnumber":4355}
+スレッド3 2回目 {"id":2,"randomnumber":36}
+スレッド3 3回目 {"id":3,"randomnumber":4355}
 ```
 
 正常に全てのクエリが実行されるが、スレッドずつ順番に実行するため、速度が遅い。マルチスレッド化している意味がない
@@ -430,15 +424,15 @@ import
   allographer/query_builder
 
 + proc initDb*():Rdb =
-+   dbOpen(PostgreSQL, "db_name", "user", "pass", "db_host", 5432, 20, 30, true, false)
++   return dbOpen(PostgreSQL, "db_name", "user", "pass", "db_host", 5432, 20, 30, true, false)
 
 randomize()
 
 + let rdb = initDb()
 rdb.create(
   table("hello", [
-    Column.integer("id"),
-    Column.integer("randomnumber")
+      Column.integer("id"),
+      Column.integer("randomnumber")
   ])
 )
 
@@ -460,12 +454,13 @@ import
   allographer/query_builder,
   ./environment
 
-proc thread(nThread:int:int) {.thread.} =
+proc thread(nThread:int) {.thread.} =
 + let rdb = initDb()
   (proc() {.async.} =
     for i in 1..3:
-      echo &"スレッド{nThread} {i}回目"
-      {.gcsafe.}: echo rdb.table("hello").first().await.get
+      {.gcsafe.}:
+        let res = rdb.table("hello").find(i).await.get
+        echo &"スレッド{nThread} {i}回目 {res}"
   )().waitFor
 
 
@@ -483,37 +478,25 @@ main()
 ```
 
 ```sh: 出力
-スレッド1 1回目
-スレッド3 1回目
-スレッド4 1回目
-{"id":2,"randomnumber":36}
-スレッド1 2回目
-{"id":2,"randomnumber":36}
-スレッド3 2回目
-スレッド2 1回目
-{"id":2,"randomnumber":36}
-{"id":3,"randomnumber":4355}
-スレッド4 2回目
-スレッド1 3回目
-{"id":2,"randomnumber":36}
-スレッド2 2回目
-{"id":3,"randomnumber":4355}
-スレッド3 3回目
-{"id":3,"randomnumber":4355}
-スレッド4 3回目
-{"id":4,"randomnumber":39}
-{"id":3,"randomnumber":4355}
-スレッド2 3回目
-{"id":4,"randomnumber":39}
-{"id":4,"randomnumber":39}
-{"id":4,"randomnumber":39}
+スレッド3 1回目 {"id":1,"randomnumber":2}
+スレッド3 2回目 {"id":2,"randomnumber":36}
+スレッド2 1回目 {"id":1,"randomnumber":2}
+スレッド3 3回目 {"id":3,"randomnumber":4355}
+スレッド4 1回目 {"id":1,"randomnumber":2}
+スレッド1 1回目 {"id":1,"randomnumber":2}
+スレッド2 2回目 {"id":2,"randomnumber":36}
+スレッド4 2回目 {"id":2,"randomnumber":36}
+スレッド1 2回目 {"id":2,"randomnumber":36}
+スレッド2 3回目 {"id":3,"randomnumber":4355}
+スレッド4 3回目 {"id":3,"randomnumber":4355}
+スレッド1 3回目 {"id":3,"randomnumber":4355}
 ```
 スレッド同士が競合せずにDBアクセスできるようになったが、フルスタックWebフレームワークのデザイン上、どう子スレッドの中でコネクションを作り開発者が触るところへ出すかは難しい。
 
 
 ## スレッド毎にPluginという概念を持ち、そこにコネクションを持たせる
 
-```diff nim:emvironment.nim
+```diff nim:environment.nim
 import
   std/asyncdispatch,
   std/random,
@@ -523,7 +506,7 @@ import
   allographer/query_builder
 
 proc initDb*():Rdb =
-  return dbOpen(PostgreSQL, "hello_world", "benchmarkdbuser", "benchmarkdbpass", "tfb-database-pg", 5432, 10, 30, false, false)
+  return dbOpen(PostgreSQL, "db_name", "user", "pass", "db_host", 5432, 20, 30, true, false)
 
 + type Plugin* = ref object
 +   rdb*: Rdb
@@ -551,71 +534,64 @@ import
   std/asyncdispatch,
   std/json,
   std/options,
+  std/strformat,
   allographer/query_builder,
   ./environment
 
 + proc controller*(param: (Plugin, int)):Future[void] {.async, gcsafe.} =
-+   let (plugin, n) = param
++   let (plugin, nThread) = param
     for i in 1..3:
-      echo &"スレッド{nThread} {i}回目"
-+     echo plugin.rdb.table("World").find(i+1).await.get
+      let res = plugin.rdb.table("hello").find(i).await.get
+      echo &"スレッド{nThread} {i}回目 {res}"
 ```
 
 ```diff nim:main.nim
 import
-  asyncdispatch,
-  json,
-  osproc,
+  std/asyncdispatch,
+  std/json,
+  std/osproc,
   ./environment,
   ./controller
 
 + proc thread(param:(Plugin, int)) {.thread.} =
     (proc() {.async.} =
-        await controller.controller(param)
+      await controller.controller(param)
     )().waitFor
 
 
-+ proc main(plugin:Plugin) =
-    when compileOption("threads"):
-      let countThreads = countProcessors()
++ proc main(plugins:seq[Plugin]) =
+  when compileOption("threads"):
+    let countThreads = countProcessors()
 +     var thr = newSeq[Thread[(Plugin, int)]](countThreads)
-      for i in 0..countThreads-1:
-+       createThread(thr[i], thread, (plugin, i))
-      joinThreads(thr)
-    else:
-      thread((plugin, 1))
++     for i in 0..countThreads-1:
++       createThread(thr[i], thread, (plugins[i], i+1))
+    joinThreads(thr)
+  else:
++     thread((plugins[0], 1))
 
-+ let plugin = Plugin(
-+   rdb: initDb()
-+ )
-+ main(plugin)
++ var plugins = newSeq[Plugin](countProcessors())
++ for i in 0..countProcessors()-1:
++   plugins[i] = Plugin(
++     rdb:initDb()
++   ) 
++ main(plugins)
 ```
 
 ```sh: 出力
-スレッド3 1回目
-スレッド4 1回目
-{"id":2,"randomnumber":1262}
-スレッド3 2回目
-{"id":3,"randomnumber":2541}
-スレッド3 3回目
-{"id":4,"randomnumber":3296}
-{"id":2,"randomnumber":1262}
-スレッド4 2回目
-スレッド2 1回目
-{"id":2,"randomnumber":1262}
-スレッド2 2回目
-{"id":3,"randomnumber":2541}
-スレッド2 3回目
-{"id":4,"randomnumber":3296}
-{"id":3,"randomnumber":2541}
-スレッド4 3回目
-{"id":4,"randomnumber":3296}
-スレッド1 1回目
-{"id":2,"randomnumber":1262}
-スレッド1 2回目
-{"id":3,"randomnumber":2541}
-スレッド1 3回目
-{"id":4,"randomnumber":3296}
+スレッド2 1回目 {"id":1,"randomnumber":2}
+スレッド3 1回目 {"id":1,"randomnumber":2}
+スレッド1 1回目 {"id":1,"randomnumber":2}
+スレッド4 1回目 {"id":1,"randomnumber":2}
+スレッド2 2回目 {"id":2,"randomnumber":36}
+スレッド3 2回目 {"id":2,"randomnumber":36}
+スレッド1 2回目 {"id":2,"randomnumber":36}
+スレッド4 2回目 {"id":2,"randomnumber":36}
+スレッド3 3回目 {"id":3,"randomnumber":4355}
+スレッド1 3回目 {"id":3,"randomnumber":4355}
+スレッド4 3回目 {"id":3,"randomnumber":4355}
+スレッド2 3回目 {"id":3,"randomnumber":4355}
 ```
 
-コントローラーの中でrdbへのインスタンスはpluginを通して使う。
+スレッドの数だけPluginの配列を作り、各スレッドにはPluginを渡す。
+こうすることでスレッド同士が同じPluginを触るのを防ぐ。
+Pluginを通してコントローラーの中でrdbへのインスタンスを使う。
