--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -26,7 +26,7 @@ import
   std/asynchttpserver
 
 
-proc listenerHTTP {.async.} =
+proc asyncProc {.async.} =
   var server = newAsyncHttpServer()
   proc cb(req: Request) {.async.} =
     let headers = {"Content-type": "text/plain; charset=utf-8"}
@@ -39,7 +39,7 @@ proc listenerHTTP {.async.} =
     else:
       await sleepAsync(500)
 
-waitFor listenerHTTP()
+waitFor asyncProc()
 ```
 
 こうじゃ
@@ -51,8 +51,8 @@ import
   std/strformat
 
 
-proc runHTTPServer() {.thread.} =
-  proc listenerHTTP() {.async.} =
+proc threadProc() {.thread.} =
+  proc asyncProc() {.async.} =
     var server = newAsyncHttpServer(true, true)
     proc cb(req: Request) {.async, gcsafe.} =
       let headers = {"Content-type": "text/plain; charset=utf-8"}
@@ -67,7 +67,7 @@ proc runHTTPServer() {.thread.} =
 
   while true:
     try:
-      asyncCheck listenerHTTP()
+      asyncCheck asyncProc()
       runForever()
     except:
       echo repr(getCurrentException())
@@ -75,19 +75,13 @@ proc runHTTPServer() {.thread.} =
 proc serve() =
   when compileOption("threads"):
     let countThreads = countProcessors()
+    echo(&"Starting {countThreads} threads")
+    var thr = newSeq[Thread[void]](countThreads)
+    for i in 1..countThreads:
+      createThread(thr[i-1], threadProc)
+    joinThreads(thr)
   else:
-    let countThreads = 1
-
-  echo(&"Starting {countThreads} threads")
-
-  if countThreads > 1:
-    when compileOption("threads"):
-      var thr = newSeq[Thread[void]](countThreads)
-      for i in 1..countThreads:
-        createThread(thr[i-1], runHTTPServer)
-      joinThreads(thr)
-  else:
-    runHTTPServer()
+    threadProc()
 
 serve()
 ```
@@ -121,7 +115,6 @@ proc main() =
   joinThreads(thr)
 
 main()
-
 ```
 
 コンパイルエラーになる
@@ -230,7 +223,7 @@ import
 proc thread(nThread:int) {.thread.} =
   (proc() {.async.} =
     for i in 1..3:
-      let res = rdb.table("hello").find(i+1).await.get
+      let res = rdb.table("hello").find(i).await.get
       echo &"スレッド{nThread} {i}回目 {res}"
   )().waitFor
 
@@ -272,7 +265,7 @@ proc thread(nThread:int:int) {.thread.} =
   (proc() {.async.} =
     for i in 1..3:
 +     {.gcsafe.}:
-        let res = rdb.table("hello").find(i+1).await.get
+        let res = rdb.table("hello").find(i).await.get
         echo &"スレッド{nThread} {i}回目 {res}"
   )().waitFor
 
@@ -594,4 +587,5 @@ import
 
 スレッドの数だけPluginの配列を作り、各スレッドにはPluginを渡す。
 こうすることでスレッド同士が同じPluginを触るのを防ぐ。
+メモリ管理はスレッド単位で行われる。
 Pluginを通してコントローラーの中でrdbへのインスタンスを使う。
