--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -589,3 +589,237 @@ import
 こうすることでスレッド同士が同じPluginを触るのを防ぐ。
 メモリ管理はスレッド単位で行われる。
 Pluginを通してコントローラーの中でrdbへのインスタンスを使う。
+
+# フレームワークを通してコントローラーにPluginを渡す
+上のサンプルでは`main.nim`が`Plugin`の定義を知っている。
+
+```sh: ディレクトリ構成
+.
+├── controller.nim
+├── fw
+│   └── lib.nim
+├── main
+├── main.nim
+└── setting.nim
+```
+
+この時、ファイルの依存関係は以下のようになる
+```sh
+main ──> controller ──> fw/lib
+　　　　　　setting
+```
+
+Pluginがどんなフィールドを持つかは開発者側のsettingなどで定義したい。しかしfw/libはPluginの定義については知りえない。
+もしPluginの定義をフレームワークの中ですると、開発者が任意のフィールドをそこに乗せることはできないことになる。
+
+## templateを使う
+templateを使えば、Pluginを呼び出しているasynchttpserverの処理ロジックを開発者側のmainに持ってくることができる。
+
+```nim: setting.nim
+import
+  std/asyncdispatch,
+  allographer/connection,
+  allographer/query_builder
+
+
+proc initDb*():Rdb =
+  return dbOpen(PostgreSQL, "database", "user", "pass", "db", 5432, 20, 30, true, false)
+
+# ============================================================
+type Plugin* = ref object
+  rdb*:Rdb
+
+proc new*(_:type Plugin):Plugin =
+  return Plugin(
+    rdb: initDb()
+  )
+
+# ============================================================
+type Controller* = ref object
+  action*: proc(plugin:Plugin):Future[string] {.async, gcsafe.}
+
+proc new*(_:type Controller, action: proc(plugin:Plugin):Future[string] {.async, gcsafe.}):Controller =
+  return Controller(action:action)
+```
+Pluginの定義、そしてコントローラーがどんな引数を受け取るかを開発者側で定義する。
+
+```nim: fw/lib.nim
+import
+  std/httpcore
+
+
+type Route* = ref object
+  path*:string
+  httpMethod*:HttpMethod
+
+template serveWithPlugin*(routes, createPlugin:untyped):untyped =
+  proc threadProc(params:(seq[(Route, Controller)], Plugin)) {.thread.} =
+    proc asyncProc(params:(seq[(Route, Controller)], Plugin)) {.async.} =
+      var server = newAsyncHttpServer(true, true)
+      proc cb(req: Request) {.async, gcsafe.} =
+        let headers = {"Content-type": "text/plain; charset=utf-8"}
+        let (routes, plugin) = params
+        for route in routes:
+          if req.url.path == route[0].path and req.reqMethod == route[0].httpMethod:
+            let resp = route[1].action(plugin).await
+            await req.respond(Http200, resp, headers.newHttpHeaders())
+            break
+        await req.respond(Http404, "", headers.newHttpHeaders())
+
+      server.listen(Port(5000))
+      while true:
+        if server.shouldAcceptRequest():
+          await server.acceptRequest(cb)
+        else:
+          await sleepAsync(500)
+
+    while true:
+      try:
+        asyncCheck asyncProc(params)
+        runForever()
+      except:
+        echo repr(getCurrentException())
+
+  proc serve(routes:seq[(Route, Controller)], `createPlugin`:proc():Plugin) =
+    let countThreads = countProcessors()
+    var params:seq[(seq[(Route, Controller)], Plugin)]
+    for i in 1..countThreads:
+      params.add((routes, `createPlugin`()))
+    when compileOption("threads"):
+      echo("Starting ", countThreads, " threads")
+      var thr = newSeq[Thread[(seq[(Route, Controller)], Plugin)]](countThreads)
+      for i in 0..countThreads-1:
+        createThread(thr[i], threadProc, params[i])
+      joinThreads(thr)
+    else:
+      threadProc(params[0])
+
+  serve(`routes`, `createPlugin`)
+```
+
+```nim: controller.nim
+import 
+  std/asyncdispatch,
+  std/options,
+  std/json,
+  allographer/query_builder,
+  ./setting
+
+proc index*(plugin:Plugin):Future[string] {.async, gcsafe.} =
+  for i in 1..10:
+    echo plugin.rdb.table("num_table").find(i).await.get()
+  return "index"
+
+proc show*(plugin:Plugin):Future[string] {.async, gcsafe.} =
+  return "show"
+```
+
+```nim: main.nim
+import
+  std/asyncdispatch,
+  std/asynchttpserver,
+  std/osproc,
+  ./fw/lib,
+  ./setting,
+  ./controller
+
+
+let routes = @[
+  (Route(path:"/", httpMethod:HttpGet), Controller.new(index)),
+  (Route(path:"/show", httpMethod:HttpGet), Controller.new(show))
+]
+
+proc createPlugin*():Plugin =
+  return Plugin.new()
+
+serveWithPlugin(routes, createPlugin)
+```
+
+動作する
+```sh
+Starting 4 threads
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["1"]
+{"id":1,"randomnumber":7985}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["2"]
+{"id":2,"randomnumber":6529}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["3"]
+{"id":3,"randomnumber":6613}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["4"]
+{"id":4,"randomnumber":1471}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["5"]
+{"id":5,"randomnumber":8057}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["6"]
+{"id":6,"randomnumber":944}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["7"]
+{"id":7,"randomnumber":1194}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["8"]
+{"id":8,"randomnumber":5665}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["9"]
+{"id":9,"randomnumber":1812}
+DEBUG SELECT * FROM num_table WHERE id = ? LIMIT 1 ["10"]
+{"id":10,"randomnumber":6917}
+```
+
+---
+
+Pluginが持つフィールドを標準ライブラリの`db_postgres`の`DbConn`に差し替えてみる
+
+```diff nim:setting.nim
+import
+  std/asyncdispatch,
++ std/db_postgres
+
+
+proc initDb*():DbConn =
++ open("db", "user", "pass", "database")
+
+
+# ============================================================
+type Plugin* = ref object
++ rdb*:DbConn
+
+proc new*(_:type Plugin):Plugin =
+  return Plugin(
+    rdb: initDb()
+  )
+
+# ============================================================
+type Controller* = ref object
+  action*: proc(plugin:Plugin):Future[string] {.async, gcsafe.}
+
+proc new*(_:type Controller, action: proc(plugin:Plugin):Future[string] {.async, gcsafe.}):Controller =
+  return Controller(action:action)
+```
+
+```diff nim:controller.nim
+import 
+  std/asyncdispatch,
+  std/db_postgres,
+  std/options,
+  std/json,
+  allographer/query_builder,
+  ./setting
+
+proc index*(plugin:Plugin):Future[string] {.async, gcsafe.} =
+  for i in 1..10:
++   echo plugin.rdb.getRow(sql"SELECT * FROM num_table WHERE id = ?", i)
+  return "index"
+
+proc show*(plugin:Plugin):Future[string] {.async, gcsafe.} =
+  return "show"
+```
+
+動作する
+```sh
+Starting 4 threads
+@["1", "7985"]
+@["2", "6529"]
+@["3", "6613"]
+@["4", "1471"]
+@["5", "8057"]
+@["6", "944"]
+@["7", "1194"]
+@["8", "5665"]
+@["9", "1812"]
+@["10", "6917"]
+```
