--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -770,8 +770,8 @@ import
 + std/db_postgres
 
 
-proc initDb*():DbConn =
-+ open("db", "user", "pass", "database")
++proc initDb*():DbConn =
++  open("db", "user", "pass", "database")
 
 
 # ============================================================
@@ -823,3 +823,58 @@ Starting 4 threads
 @["9", "1812"]
 @["10", "6917"]
 ```
+
+## ベンチマーク測定
+```nim: controller.nim
+import 
+  std/asyncdispatch,
+  std/options,
+  std/json,
+  std/strutils,
+  std/sequtils,
+  allographer/query_builder,
+  ./setting
+
+
+proc index*(plugin:Plugin):Future[string] {.async, gcsafe.} =
+  let nThreads = 500
+  var futures = newSeq[Future[Option[JsonNode]]](nThreads)
+  for i in 1..nThreads:
+    futures[i-1] = plugin.rdb.table("num_table").find(i)
+  let res = all(futures).await
+  let response = res.map(
+    proc(x:Option[JsonNode]):JsonNode =
+      x.get()
+  )
+  return $(%response)
+
+proc show*(plugin:Plugin):Future[string] {.async, gcsafe.} =
+  return "show"
+```
+
+コンパイル
+```sh
+DB_POSTGRES=true nim c -r --threads:{on|off} --mm:{refc|arc|orc} -d:useMalloc -d:useRealtimeGC -d:release main
+```
+
+測定
+```sh
+wrk -c4 -t4 -d10s http://localhost:5000 # DB access
+wrk -c4 -t4 -d10s http://localhost:5000/show # return string
+```
+|Memory monagement|Threads|DB access|return string|
+|---|---|---|---|
+|refc|on|33|233624|
+|refc|off|151|234453|
+|arc|on|88|219813|
+|arc|off|166|228683|
+|orc|on|81|clash|
+|orc|off|137|182754|
+
+なぜかシングルスレッドの方がパフォーマンスが良い(´・ω・｀)
+[--gc:orc ; Multi-threaded async slower than single-threaded](https://github.com/nim-lang/Nim/issues/15661)
+
+<!-- 
+# セッションを実装する
+RDBはスレッド毎にコネクションを作り、コントローラーが呼び出される時にはスレッド単位のコネクションが呼び出されるためスレッドセーフになる。
+しかしセッションは複数のスレッドから1ヶ所のRedisに接続するために、Lockなどを使う必要がある。 -->
