--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -874,7 +874,7 @@ wrk -c4 -t4 -d10s http://localhost:5000/show # return string
 なぜかシングルスレッドの方がパフォーマンスが良い(´・ω・｀)
 [--gc:orc ; Multi-threaded async slower than single-threaded](https://github.com/nim-lang/Nim/issues/15661)
 
-<!-- 
-# セッションを実装する
-RDBはスレッド毎にコネクションを作り、コントローラーが呼び出される時にはスレッド単位のコネクションが呼び出されるためスレッドセーフになる。
-しかしセッションは複数のスレッドから1ヶ所のRedisに接続するために、Lockなどを使う必要がある。 -->
+
+<!-- # セッションを実装する -->
+<!-- RDBはスレッド毎にコネクションを作り、コントローラーが呼び出される時にはスレッド単位のコネクションが呼び出されるためスレッドセーフになる。 -->
+<!-- しかしセッションは複数のスレッドから1ヶ所のRedisに接続するために、Lockなどを使う必要がある。 -->
