--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -1,5 +1,5 @@
 ---
-title: "Nimのウェブフレームワークをマルチスレッド化するための断片的な知識"
+title: "Nimのウェブフレームワークを高速化するための断片的な知識"
 emoji: "👑"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["nim"]
@@ -872,8 +872,15 @@ wrk -c4 -t4 -d10s http://localhost:5000/show # return string
 |orc|off|137|182754|
 
 なぜかシングルスレッドの方がパフォーマンスが良い(´・ω・｀)
-[--gc:orc ; Multi-threaded async slower than single-threaded](https://github.com/nim-lang/Nim/issues/15661)
 
+
+# Nimの非同期とマルチスレッドに関する議論
+どうやらIOバウンドな処理はマルチスレッドで動かすよりも、シングルスレッドで非同期を使ったほうがいいようです。
+
+[--gc:orc ; Multi-threaded async slower than single-threaded](https://github.com/nim-lang/Nim/issues/15661)
+[Criticism of Parallel Nim](https://forum.nim-lang.org/t/7621)
+[Channel / Actors based parallelism? Are there such Web Servers?](https://forum.nim-lang.org/t/7583)
+[Threading in Nim](https://forum.nim-lang.org/t/7968)
 
 <!-- # セッションを実装する -->
 <!-- RDBはスレッド毎にコネクションを作り、コントローラーが呼び出される時にはスレッド単位のコネクションが呼び出されるためスレッドセーフになる。 -->
