--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -882,6 +882,94 @@ wrk -c4 -t4 -d10s http://localhost:5000/show # return string
 [Channel / Actors based parallelism? Are there such Web Servers?](https://forum.nim-lang.org/t/7583)
 [Threading in Nim](https://forum.nim-lang.org/t/7968)
 
+# コネクションプール VS プリペアドステートメント
+[Nim製クエリビルダのallographer](https://github.com/itsumura-h/nim-allographer)はコネクションプールの仕組みを持っている。短時間に大量のDBアクセスをする時に、あるクエリがaのコネクションを使っていると、他のクエリではbのコネクションを使ってDBへアクセスする。aのコネクションの使用中の状態が解除されたら別のクエリがまたaのコネクションを使う。PostgreSQLではデフォルトで100コネクションを張ることができるので、95コネクションくらいなら同時に使って大量のDBアクセスを捌くことができる。
+一方でコネクションプールを使ったクエリ実行は、毎回クエリをパースし構文を解釈し値をバインドしている。プリペアドステートメントを使えばクエリのパースは1回で済み、値のバインドだけを行えばいいので、同じ構文のクエリを何回も実行する場合はプリペアドステートメントの方が速いらしい。しかしプリペアドステートメントはコネクション単位で作られるため、1つのプリペアドステートメントでは1つのコネクションを使い回さなければいけない。
+今回は毎回クエリのパースをしても複数のコネクションを使ったほうが速いのか、プリペアドステートメントを使ったほうが速いのか実験してみる。
+
+```sh
+DB_POSTGRES=true nim c -r --threads:off --mm:arc -d:useMalloc -d:useRealtimeGC -d:release main
+```
+
+```nim:main.nim
+import 
+  std/asyncdispatch,
+  std/json,
+  std/options,
+  std/random,
+  std/times,
+  allographer/connection,
+  allographer/schema_builder,
+  allographer/query_builder,
+  allographer/async/async_db
+
+randomize()
+
+let rdb = dbOpen(PostgreSQL, "database", "user", "pass", "db", 5432, 96, 30, false, false)
+
+proc init() =
+  rdb.create(
+    table("num_threads", [
+        Column.integer("id"),
+        Column.integer("randomnumber")
+    ])
+  )
+
+  seeder rdb, "num_threads":
+    var data = newSeq[JsonNode]()
+    for i in 1..10000:
+      let randomNum = rand(10000)
+      data.add(%*{"id": i, "randomnumber": randomNum})
+    rdb.table("num_threads").insert(data).waitFor
+
+
+proc main(){.async.} =
+  init()
+  let n = 500
+  # プリペアドステートメント
+  block:
+    let start = cpuTime()
+    var resp = newJArray()
+    let conn = rdb.conn
+    let prepare = conn.prepare(PostgreSQL, "select * from num_table where id = $1 LIMIT 1", "12345").await
+    var futures = newSeq[Future[(seq[Row], DbRows)]](n)
+    for i in 1..n:
+      futures[i-1] = prepare.query(PostgreSQL, @[$i])
+    
+    let resArr = all(futures).await
+    for res in resArr:
+      let rows = res[0]
+      for row in rows:
+        let dbInfo = res[1]
+        resp.add(%*{dbInfo[0][0].name: row[0], dbInfo[0][1].name: row[1]})
+    # echo resp
+    echo cpuTime() - start
+
+  # コネクションプール
+  block:
+    let start = cpuTime()
+    var resp = newJArray()
+    var futures = newSeq[Future[Option[JsonNode]]](n)
+    for i in 1..n:
+      futures[i-1] = rdb.table("num_table").find(i)
+    let resArr = all(futures).await
+    for rowOpt in resArr:
+      resp.add(rowOpt.get)
+    # echo resp
+    echo cpuTime() - start
+
+
+main().waitFor
+```
+
+結果
+|プリペアドステートメント|コネクションプール|
+|---|---|
+|0.5787295100000001|0.05459516299999989|
+
+なんと10倍以上の差だった。プリペアドステートメントよりもコネクションプールを使った方が圧倒的に速かった。
+
+
 <!-- # セッションを実装する -->
 <!-- RDBはスレッド毎にコネクションを作り、コントローラーが呼び出される時にはスレッド単位のコネクションが呼び出されるためスレッドセーフになる。 -->
 <!-- しかしセッションは複数のスレッドから1ヶ所のRedisに接続するために、Lockなどを使う必要がある。 -->
