--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -962,6 +962,12 @@ proc main(){.async.} =
 main().waitFor
 ```
 
+`echo reso`の出力結果
+```sh
+[{"id":1,"randomnumber":7985},{"id":2,"randomnumber":6529},{"id":3,"randomnumber":6613}...{"id":500,"randomnumber":9237}]
+```
+
+
 結果
 |プリペアドステートメント|コネクションプール|
 |---|---|
