--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -882,6 +882,7 @@ wrk -c4 -t4 -d10s http://localhost:5000/show # return string
 [Channel / Actors based parallelism? Are there such Web Servers?](https://forum.nim-lang.org/t/7583)
 [Threading in Nim](https://forum.nim-lang.org/t/7968)
 
+
 # コネクションプール VS プリペアドステートメント
 [Nim製クエリビルダのallographer](https://github.com/itsumura-h/nim-allographer)はコネクションプールの仕組みを持っている。短時間に大量のDBアクセスをする時に、あるクエリがaのコネクションを使っていると、他のクエリではbのコネクションを使ってDBへアクセスする。aのコネクションの使用中の状態が解除されたら別のクエリがまたaのコネクションを使う。PostgreSQLではデフォルトで100コネクションを張ることができるので、95コネクションくらいなら同時に使って大量のDBアクセスを捌くことができる。
 一方でコネクションプールを使ったクエリ実行は、毎回クエリをパースし構文を解釈し値をバインドしている。プリペアドステートメントを使えばクエリのパースは1回で済み、値のバインドだけを行えばいいので、同じ構文のクエリを何回も実行する場合はプリペアドステートメントの方が速いらしい。しかしプリペアドステートメントはコネクション単位で作られるため、1つのプリペアドステートメントでは1つのコネクションを使い回さなければいけない。
@@ -975,8 +976,10 @@ main().waitFor
 
 なんと10倍以上の差だった。プリペアドステートメントよりもコネクションプールを使った方が圧倒的に速かった。
 
-## asyncdispatch VS chronos
+
+# asyncdispatch VS chronos
 Nimは非同期の仕組みを提供する標準ライブラリの[asyncdispatch](https://nim-lang.org/docs/asyncdispatch.html)と、Status社が開発した3rdパーティの[chronos](https://github.com/status-im/nim-chronos)がある。
+これのパフォーマンスを比較してみる。
 
 ```nim: main.nim
 import 
