--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -1104,23 +1104,33 @@ DB_POSTGRES=true nim c -r --mm:arc -d:useMalloc -d:useRealtimeGC -d:release -d:a
 
 <!-- 3rdパーティの[GuildenStern](https://github.com/olliNiinivaara/GuildenStern)、内部的にChronosを使ったStatus社製の[chronoshttpserver](https://github.com/status-im/nim-chronos/blob/master/chronos/apps/http/httpserver.nim) --> 
 
-|ライブラリ|シナリオ|GC|スレッド|req/10s|
-|---|---|---|---|---|
-|httpbeast|DB|ORC|on|73|
-|httpbeast|html|ORC|on|double free or corruption (fasttop)|
-|httpbeast|DB|ORC|off|96|
-|httpbeast|html|ORC|off|289313|
-|httpbeast|DB|ARC|on|75|
-|httpbeast|html|ARC|on|280547|
-|httpbeast|DB|ARC|off|95|
-|httpbeast|html|ARC|off|310421|
-|asynchttpserver|DB|ORC|on|double free or corruption (!prev)|
-|asynchttpserver|html|ORC|on|double free or corruption (fasttop)|
-|asynchttpserver|DB|ORC|off|124|
-|asynchttpserver|html|ORC|off|179902|
-|asynchttpserver|DB|ARC|on|59|
-|asynchttpserver|html|ARC|on|229477|
-|asynchttpserver|DB|ARC|off|139|
-|asynchttpserver|html|ARC|off|219878|
+## HTMLを返すシナリオ
 
-httpbeast・ARC・シングルスレッドの組み合わせが安定していてパフォーマンスが良さそうである。
+|ライブラリ|GC|スレッド|req/10s|
+|---|---|---|---|
+|httpbeast|ORC|on|double free or corruption (fasttop)|
+|httpbeast|ORC|off|289313|
+|httpbeast|ARC|on|280547|
+|httpbeast|ARC|off|310421|
+|asynchttpserver|ORC|on|double free or corruption (fasttop)|
+|asynchttpserver|ORC|off|179902|
+|asynchttpserver|ARC|on|229477|
+|asynchttpserver|ARC|off|219878|
+
+
+## リクエスト毎にDBに500回アクセスするシナリオ
+
+|ライブラリ|GC|スレッド|req/10s|
+|---|---|---|---|
+|httpbeast|ORC|on|73|
+|httpbeast|ORC|off|96|
+|httpbeast|ARC|on|75|
+|httpbeast|ARC|off|95|
+|asynchttpserver|ORC|on|double free or corruption (!prev)|
+|asynchttpserver|ORC|off|124|
+|asynchttpserver|ARC|on|59|
+|asynchttpserver|ARC|off|139|
+
+非同期を使った時にGCがARCだと、開放されない値があるのか何回も動かしているうちにメモリリークが起きたので、現実的にはORCか現行のrefcしか選択肢はないことになる。  
+しかしORCもマルチスレッドで動かした時にはセグフォが頻繁に起きる。  
+httpbeast・ORC・シングルスレッドの組み合わせが安定していてパフォーマンスが良さそうである。
