--- a/articles/354a8873832a12.md
+++ b/articles/354a8873832a12.md
@@ -12,8 +12,33 @@ published: true
 ---
 
 # 起動コマンド
+はじめにコンパイルオプションを確認します
+
+|オプション|意味|
+|---|---|
+|--mm:orc|GCにORCを使う|
+|--mm:refc|GCに参照カウントを使う|
+|-d:ssl|OpenSSLサポートを有効にする|
+|-d:release|リリースビルドを行う。速くなる|
+|-d:danger|ランタイムチェックを無効にし最適化を有効にする|
+|-d:useMalloc|Nimのメモリマネージャーの代わりにCのMallocを使う|
+|--panics|パニックが起きるとプロセスを終了にする|
+|--threads|マルチスレッドを有効にする|
+|--stackTrace|プログラムがクラッシュしたときに、適切なスタックトレースが与えられるためのコードが生成される|
+|--excessiveStackTrace|スタックトレースがファイルのフルパスを表示する|
+|--lineTrace|スタックトレースに行情報を含む|
+
+シングルスレッドで動かす時とマルチスレッドで動かす時ではコマンドが異なる。  
+https://github.com/nim-lang/Nim/issues/15661#issuecomment-713094010
+
+シングルスレッド
 ```sh
-nim c -r --threads:on --mm:orc -d:useMalloc -d:useRealtimeGC main
+nim c -r -d:release --threads:off -d:danger --mm:orc main
+```
+
+マルチスレッド
+```sh
+nim c -r -d:release --threads:on -d:danger --mm:orc -d:useMalloc --panics:on --stackTrace --excessiveStackTrace --lineTrace main
 ```
 
 # asynchttpserverのマルチスレッド化
