rustをnimから呼び出す

--- a/articles/3db2134ff88763.md
+++ b/articles/3db2134ff88763.md
@@ -5,7 +5,7 @@ type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [
   "nim", "rust"
 ]
-published: false
+published: true
 ---
 
 ## モチベーション
@@ -20,6 +20,12 @@ Nimはコンパイル時に一旦C言語に変換するために、既にC言語
 この2つの言語の特徴を考えた時に、数学に基づくアルゴリズムの実装などのライブラリはRustで、アプリケーションはNimで作ると両者のいいとこ取りができるのではないでしょうか。
 
 Nim、Rust両方共にC言語を介したFFIの機構が備わっているため、今回はそれを使ってRustで作ったライブラリをNimのアプリケーションから呼ぶ実験をします。
+
+:::message alert
+筆者はRust1週間の初心者です。Nimは長く触っていますが、C言語の経験もないPHPer出身でLL言語ばかりやってきました。
+Rustの使い方やメモリ管理について間違った記述をしている可能性があります。
+もし発見した場合はお気軽にコメントください。
+:::
 
 ## 環境構築
 NimとRust両方の環境が入ったDockerコンテナを作ります。
@@ -177,6 +183,15 @@ const libpath = "/application/src/rustlib/target/release/librustlib.so"
 proc add*(a, b:int64):int64 {.dynlib:libpath, importc: "add".}
 ```
 
+静的アーカイブを呼び出す時にはこのようにします。
+```nim:rustlib.nim
+const libpath = "/application/src/rustlib/target/release/librustlib.a"
+
+{.passL:libpath.}
+proc add*(a, b:int64):int64 {.cdecl, importc: "add".}
+```
+
+
 あとは`nimapp.nim`からこの`add`関数を呼び出せばいいだけです。
 ```nim:nimapp.nim
 import std/unittest
@@ -209,7 +224,6 @@ RustのVectorをNimで扱うにはどうすればいいでしょうか。
 フィボナッチ数を返す関数、それを内部で呼んでフィボナッチ数列を返す関数を定義します。
 
 ```rust:lib.rs
-#[no_mangle]
 fn fib(n: u64) -> u64 {
     match n {
         0 => 0,
@@ -456,6 +470,7 @@ pub fn cstirng_to_string(_arg: *const c_char) -> String {
         assert!(!_arg.is_null());
         let c_str = CStr::from_ptr(_arg);
         let str_slice = c_str.to_str().unwrap();
+        drop(c_str);
         str_slice.to_owned()
     };
     arg
@@ -511,6 +526,10 @@ proc name*(self:Person):string = $self.rawPtr.getPersonName()
 では呼び出してみましょう。
 
 ```nim:nimapp.nim
+import std/unittest
+import ./rustlib
+
+
 suite "object":
   test "person":
     let person = Person.new(1, "John")
@@ -662,6 +681,10 @@ proc setName*(self:UpdatablePerson, name:string) = self.rawPtr.setUpdatablePerso
 呼び出します。
 
 ```nim:nimapp.nim
+import std/unittest
+import ./rustlib
+
+
 suite "object":
   test "updatable person":
     let person = UpdatablePerson.new(1, "John")
@@ -694,3 +717,283 @@ Paul
 
 セッターを使っても上手く呼び出すことができました。
 
+## Rustのライブラリを使う
+これまでは独自に実装した処理を呼び出してきましたが、本当にやりたいことはRustにある豊富なライブラリの資産をNimから使うことです。
+ブロックチェーン領域で使われる楕円曲線暗号を実装したライブラリをNimから呼び出してみましょう。
+
+https://docs.rs/p256/latest/p256/
+
+### 秘密鍵を作る
+Ethereumで使われる秘密鍵とは0〜255までの数字（8bit）が32個並んだ、256bit（32byte）の乱数です。
+
+https://www.etarou.work/posts/5084927/
+
+#### Rust側
+```sh
+cargo add p256 rand_core hex
+```
+
+```rust:submods/crypto.rs
+use hex::decode as hex_decode;
+use hex::encode as hex_encode;
+use p256::ecdsa::signature::{Signer, Verifier};
+use p256::ecdsa::{Signature, SigningKey, VerifyingKey};
+use rand_core::OsRng;
+use std::ffi::c_char;
+
+use crate::submods::c_ffi::{cstirng_to_string, string_to_cstring};
+
+#[no_mangle]
+pub extern "C" fn create_secret_key() -> *mut Vec<u8> {
+    let secret_key = SigningKey::random(&mut OsRng);
+    let v = secret_key.to_bytes().to_vec();
+    Box::into_raw(Box::new(v))
+}
+
+#[no_mangle]
+pub extern "C" fn get_secret_key_len(v: &mut Vec<u8>) -> usize {
+    v.len()
+}
+
+#[no_mangle]
+pub extern "C" fn get_secret_key_item(v: &mut Vec<u8>, offset: usize) -> u8 {
+    v[offset]
+}
+```
+
+秘密鍵は8bitの数字が32個並んだ配列です。フィボナッチ数列の例と同じように、`Vector`のポインタとしてNimに渡し、長さとオフセットから単体の値を取り出しNim側では`Seq`として復元します。
+
+#### Nim側
+```nim:rustlib.nim
+type SecretKey = ptr object
+
+proc createSecretKeyLib():SecretKey {.dynlib:libpath, importc:"create_secret_key".}
+proc len(self:SecretKey):int {.dynlib:libpath, importc:"get_secret_key_len".}
+proc `[]`(self:SecretKey, offset:int):uint8 {.dynlib:libpath, importc:"get_secret_key_item".}
+proc createSecretKey*():seq[uint8] =
+  let secretKey = createSecretKeyLib()
+  defer: secretKey.dealloc()
+  var s = newSeq[uint8](secretKey.len())
+  for i in 0..<secretKey.len().int:
+    s[i] = secretKey[i]
+  return s
+```
+
+```nim:nimapp.nim
+import std/unittest
+import ./rustlib
+
+
+suite "crypto":
+  test "secret key":
+    let secretKey = createSecretKey()
+    echo secretKey
+```
+
+```output
+
+[Suite] crypto
+@[39, 234, 215, 165, 187, 41, 126, 106, 147, 128, 126, 120, 235, 187, 243, 63, 97, 84, 236, 27, 126, 195, 100, 93, 40, 90, 142, 186, 63, 11, 152, 44]
+  [OK] secret key
+```
+
+### 秘密鍵を作る2
+秘密鍵は通常、`0x`から始まる16進数の文字列として扱われるので、その形で出力されるようにします。
+
+```rust:submods/crypto.rs
+#[no_mangle]
+pub extern "C" fn create_secret_key_hex() -> *mut c_char {
+    let secret_key = SigningKey::random(&mut OsRng);
+    let bytes = secret_key.to_bytes();
+    let slices = bytes.as_slice();
+    let hex_str = hex_encode(&slices);
+    string_to_cstring(hex_str)
+}
+```
+
+#### Nim側
+```nim:rustlib.nim
+proc createSecretKeyHexLib():cstring {.dynlib:libpath, importc:"create_secret_key_hex".}
+proc createSecretKeyHex*():string = "0x" & $createSecretKeyHexLib()
+```
+`createSecretKeyHex`関数で先頭に`0x`を付けています。
+
+```nim:nimapp.nim
+import std/unittest
+import ./rustlib
+
+
+suite "crypto":
+  test "hex key":
+    let key = createSecretKeyHex()
+    echo key
+```
+
+```output
+0xa44401854dad16e2f56bd8e637a550f6c0904393ac6cb4286e4e3dc5ebf4f3ed
+  [OK] hex key
+```
+
+出力されました。
+
+### 署名して、署名を検証する
+署名とは、ある文章がある秘密鍵で暗号化されたかどうかを確認することです。
+秘密鍵で暗号化された文章は同じ秘密鍵から作られた公開鍵でしか複合できません。
+その文章が本当にその秘密鍵を持つ人によって暗号化されたかどうかを確認することを検証といいます。
+
+https://www.jipdec.or.jp/project/research/why-e-signature/public-key-cryptography.html
+
+#### Rust側
+署名する関数、検証する関数の2つを作ります。
+
+```rust:submods/crypto.rs
+#[no_mangle]
+pub extern "C" fn sign_message(_msg: &mut c_char, _secret_key: &mut c_char) -> *mut c_char {
+    let msg = cstirng_to_string(_msg);
+    let b_msg = msg.as_bytes();
+
+    let secret_key = cstirng_to_string(_secret_key);
+    let b_key = &(hex_decode(secret_key).unwrap());
+    let typed_key = SigningKey::from_bytes(b_key).unwrap();
+
+    let verifying_key = typed_key.sign(b_msg);
+    let str_signature = verifying_key.to_string().to_lowercase();
+    string_to_cstring(str_signature)
+}
+
+#[no_mangle]
+pub extern "C" fn verify_sign(
+    _secret_key: &mut c_char,
+    _msg: &mut c_char,
+    _signature: &mut c_char,
+) -> bool {
+    let secret_key = cstirng_to_string(_secret_key);
+    let b_key = &(hex_decode(secret_key).unwrap());
+    let signing_key = match SigningKey::from_bytes(b_key) {
+        Ok(signing_key) => signing_key,
+        Err(_e) => return false,
+    };
+
+    let msg = cstirng_to_string(_msg);
+    let b_msg = msg.as_bytes();
+
+    let str_signature = cstirng_to_string(_signature);
+
+    let vec_signature = hex_decode(str_signature).unwrap();
+    let b_signature = vec_signature.as_slice();
+    let signature = match Signature::try_from(b_signature) {
+        Ok(signature) => signature,
+        Err(_e) => return false,
+    };
+
+    let verifying_key = VerifyingKey::from(&signing_key); // Serialize with `::to_encoded_point()`
+
+    verifying_key.verify(b_msg, &signature).is_ok()
+}
+```
+
+#### Nim側
+```nim:rustlib.nim
+proc signMessageLib(msg, key:cstring):cstring {.dynlib:libpath, importc:"sign_message".}
+proc signMessage*(msg, key:string):string =
+  let key = key[2..^1] # 先頭の0xを削除
+  return "0x" & $signMessageLib(msg.cstring, key.cstring)
+
+proc verifySignLib(key, msg, signature:cstring):bool {.dynlib: libpath, importc:"verify_sign".}
+proc verifySign*(key, msg, signature:string):bool =
+  let key = key[2..^1 ]# 先頭の0xを削除
+  let signature = signature[2..^1] # 先頭の0xを削除
+  return verifySignLib(key.cstring, msg.cstring, signature.cstring)
+```
+
+```nim:nimapp.nim
+import std/unittest
+import ./rustlib
+
+
+suite "crypto":
+  test "sign message":
+    let msg = "Hello World"
+    let key = createSecretKeyHex()
+    echo "=== key"
+    echo key
+    let signature = signMessage(msg, key)
+    echo "=== signature"
+    echo signature
+    let isValid = verifySign(key, msg, signature)
+    echo "=== expect true"
+    echo isValid
+    check isValid
+
+  test "wrong message":
+    let msg = "Hello World"
+    let key = createSecretKeyHex()
+    echo "=== key"
+    echo key
+    let signature = signMessage(msg, key)
+    echo "=== signature"
+    echo signature
+
+    var expectWrong = verifySign(key, "wrong", signature)
+    echo "=== expect false"
+    echo expectWrong
+    check expectWrong == false
+
+  test "wrong signature":
+    let msg = "Hello World"
+    let key = createSecretKeyHex()
+    echo "=== key"
+    echo key
+    let signature = signMessage(msg, key)
+    echo "=== signature"
+    echo signature
+
+    var expectWrong = verifySign("0x012345abcdef", msg, signature)
+    echo "=== expect false"
+    echo expectWrong
+    check expectWrong == false
+```
+
+```output
+=== key
+0xa9901bb411cf0af4cf10df0a813adfb3506e80629a851ab9f9685b65dad1fc7c
+=== signature
+0xe6b7ec44db67dae064601cb1f82afb56378eb7e625cdb07d2954c0e031e8ddf54b9412e2532c433bf8b896e64ce80e15d8489033ebe5a10d0e7836e5ec14c932
+=== expect true
+true
+  [OK] sign message
+
+=== key
+0xc462e8b6fdb971b0609dee9add85ee98617ee9a01b82e729db5db01d490d0a55
+=== signature
+0x681d68b2bd942b3e74dbebc62d97de6a7990dbd5d36b42fa56e9e0b39304fe1e626b15ca707f0ce69f8f6a922a87e1dd927505f78e37a226aa00af1dfcda9d08
+=== expect false
+false
+  [OK] wrong message
+
+=== key
+0xdbf3a728f41228651d13e81d80d903f0e1c02f650a5df8d4e696da3c0de0cfbc
+=== signature
+0xf221f562c98be9a21e65bba010b17203f530d0be964dbb5f1c376956602298b3e4564d4baf24cdfb27f2090a496f60ab246b68b0e6736b430433e1fb5d17ec5f
+=== expect false
+false
+  [OK] wrong signature
+```
+
+正しく署名の検証ができました。
+
+## おわりに
+NimとRustのFFIの機能を使って相互に値をやりとりできることがわかりました。
+これでNimでRustの資産が使えます！ **どしどしNimでRustをラップしたライブラリを作り、Nimでアプリケーションを作っていきましょう！！！**
+
+感想としては、FFIをするためのRust側での型パズル、ポインタはNim側で明示的に開放しなければいけないことが少し難しいかなと思いました。
+数値側やboolはほぼそのままで大丈夫なんですが、ヒープに積まれる文字列、配列、独自型については以下のようにすると扱えるようです。
+
+|型|Nimの引数|Nimの返り値|Rustの引数|Rustの返り値|
+|---|---|---|---|---|
+|文字列|cstring|cstring|&mut c_char|*mut c_char / *const c_char|
+|配列|type T = ptr object|type T = ptr object|&mut Vec<T>|*mut Vec<T>|
+|独自型|type T = ptr object|type T = ptr object|&T / &mut T|*mut T|
+
+またRustにFFIを楽にする[`safer_ffi`](https://github.com/getditto/safer_ffi)というライブラリがあり、そちらも使ってみましたが、まだライブラリが未熟なようで、Rustの関数で引数を受け取ることができなかったりしました。
+このライブラリがちゃんと使えるようになると、Rustの関数からCのヘッダーファイルを出力し、Cのヘッダーファイルから[c2nim](https://github.com/nim-lang/c2nim)を使ってNimのインターフェース関数を自動生成できるようになるので、今後の発展に期待していきたいです。
