--- a/articles/3db2134ff88763.md
+++ b/articles/3db2134ff88763.md
@@ -242,12 +242,12 @@ pub extern "C" fn fib_array(n: u64) -> *mut Vec<u64> {
 }
 
 #[no_mangle]
-pub extern "C" fn get_vector_len(v: &Vec<u64>) -> usize {
+pub extern "C" fn get_fib_len(v: &mut Vec<u64>) -> usize {
     v.len()
 }
 
 #[no_mangle]
-pub extern "C" fn get_vector_item(v: &Vec<u64>, offset: usize) -> u64 {
+pub extern "C" fn get_fib_item(v: &mut Vec<u64>, offset: usize) -> u64 {
     v[offset]
 }
 ```
@@ -258,13 +258,13 @@ fib_arrayの返り値の型は`*mut Vec<u64>`にし、関数の最後で`Box::in
 ### Nim側
 
 ```nim:rustlib.nim
-type VectorPtr = ptr object
+type FibPtr = ptr object
 
-proc fibArrayLib(n:int):VectorPtr {.dynlib:libpath, importc: "fib_array".}
-proc len(self:VectorPtr):int {.dynlib:libpath, importc: "get_vector_len".}
-proc `[]`(self:VectorPtr, offset:int):int {.dynlib:libpath, importc: "get_vector_item".}
+proc fibArrayLib(n:uint64):FibPtr {.dynlib:libpath, importc: "fib_array".}
+proc len(self:FibPtr):int {.dynlib:libpath, importc: "get_fib_len".}
+proc `[]`(self:FibPtr, offset:int):int {.dynlib:libpath, importc: "get_fib_item".}
 proc fibArray*(n:int):seq[int] =
-  let v = fibArrayLib(n)
+  let v = fibArrayLib(n.uint64)
   defer: v.dealloc()
   var s = newSeq[int](n)
   for i in 0..<v.len:
@@ -272,10 +272,10 @@ proc fibArray*(n:int):seq[int] =
   return s
 ```
 
-Rustの`get_vector_len`の返り値はヒープの生ポインタなので、それをマッピングするための独自のオブジェクトを`VectorPtr`として定義します。
-Nimの関数は全て静的な型チェックとオーバーロードされて動くので、ここで定義した関数は全て`VectorPtr`の型を持つオブジェクトに対してのみ動きます。
+Rustの`get_fib_len`の返り値はヒープの生ポインタなので、それをマッピングするための独自のオブジェクトを`FibPtr`として定義します。
+Nimの関数は全て静的な型チェックとオーバーロードされて動くので、ここで定義した関数は全て`FibPtr`の型を持つオブジェクトに対してのみ動きます。
 `fibArray`関数の中でRust側で定義した関数たちを呼び、生ポインタからVectorの長さとオフセット位置の値を取得し、Nimの動的配列であるSeq(Sequence)に詰め替えて返しています。
-Nimでは生ポインタはNimのメモリ管理の管轄外になります。生ポインタのメモリを開放する`dealloc`関数が用意されているので、`defer`を使ってスコープを抜けるとメモリが開放されるようにします。
+Nimでは生ポインタはNimのメモリ管理の管轄外になります。ポインタのメモリを開放する`dealloc`関数が用意されているので、`defer`を使ってスコープを抜けるとメモリが開放されるようにします。
 この`defer`はGo言語と同じです。
 
 では`nimapp`の中で呼び出してみましょう。
