--- a/articles/3db2134ff88763.md
+++ b/articles/3db2134ff88763.md
@@ -745,8 +745,8 @@ use crate::submods::c_ffi::{cstirng_to_string, string_to_cstring};
 
 #[no_mangle]
 pub extern "C" fn create_secret_key() -> *mut Vec<u8> {
-    let secret_key = SigningKey::random(&mut OsRng);
-    let v = secret_key.to_bytes().to_vec();
+    let secret_key: SigningKey<NistP256> = SigningKey::random(&mut OsRng);
+    let v: Vec<u8> = secret_key.to_bytes().to_vec();
     Box::into_raw(Box::new(v))
 }
 
@@ -803,10 +803,10 @@ suite "crypto":
 ```rust:submods/crypto.rs
 #[no_mangle]
 pub extern "C" fn create_secret_key_hex() -> *mut c_char {
-    let secret_key = SigningKey::random(&mut OsRng);
-    let bytes = secret_key.to_bytes();
-    let slices = bytes.as_slice();
-    let hex_str = hex_encode(&slices);
+    let secret_key: SigningKey<NistP256> = SigningKey::random(&mut OsRng);
+    let bytes: GenericArray<u8, {unknown}.> = secret_key.to_bytes();
+    let slices: &[u8] = bytes.as_slice();
+    let hex_str: String = hex_encode(&slices);
     string_to_cstring(hex_str)
 }
 ```
@@ -844,49 +844,62 @@ suite "crypto":
 https://www.jipdec.or.jp/project/research/why-e-signature/public-key-cryptography.html
 
 #### Rust側
-署名する関数、検証する関数の2つを作ります。
+秘密鍵から公開鍵を作る関数、署名する関数、検証する関数の3つを作ります。
+1. 秘密鍵を使って文章を署名する
+2. 秘密鍵から公開鍵を作る
+3. 公開鍵と元の文章、署名から作られたハッシュから署名を検証する
+という流れになります。
 
 ```rust:submods/crypto.rs
 #[no_mangle]
-pub extern "C" fn sign_message(_msg: &mut c_char, _secret_key: &mut c_char) -> *mut c_char {
-    let msg = cstirng_to_string(_msg);
-    let b_msg = msg.as_bytes();
+pub extern "C" fn create_verifying_key(_secret_key: &mut c_char) -> *mut c_char {
+    let str_secret_key: String = cstirng_to_string(_secret_key);
+    let b_key: &Vec<u8> = &(hex_decode(str_secret_key).unwrap());
+    let signing_key: SigningKey<NistP256> = SigningKey::from_bytes(b_key).unwrap();
+    let verifying_key: VerifyingKey<NistP256> = signing_key.verifying_key();
+    let encoded_point: EncodedPoint<{unknown}> = verifying_key.to_encoded_point(true);
+    let str_signature: Stirng = encoded_point.to_string();
+    string_to_cstring(str_signature)
+}
 
-    let secret_key = cstirng_to_string(_secret_key);
-    let b_key = &(hex_decode(secret_key).unwrap());
-    let typed_key = SigningKey::from_bytes(b_key).unwrap();
+#[no_mangle]
+pub extern "C" fn sign_message(_secret_key: &mut c_char, _msg: &mut c_char) -> *mut c_char {
+    let str_secret_key: String = cstirng_to_string(_secret_key);
+    let b_key: &Vec<u8> = &(hex_decode(str_secret_key).unwrap());
+    let signing_key: SigningKey<NistP256> = SigningKey::from_bytes(b_key).unwrap();
 
-    let verifying_key = typed_key.sign(b_msg);
-    let str_signature = verifying_key.to_string().to_lowercase();
+    let msg: String = cstirng_to_string(_msg);
+    let b_msg: &[u8] = msg.as_bytes();
+
+    let verifying_key: Signature<NistP256> = signing_key.sign(b_msg);
+    let str_signature: String = verifying_key.to_string().to_lowercase();
     string_to_cstring(str_signature)
 }
 
 #[no_mangle]
 pub extern "C" fn verify_sign(
-    _secret_key: &mut c_char,
+    _verifying_key: &mut c_char,
     _msg: &mut c_char,
     _signature: &mut c_char,
 ) -> bool {
-    let secret_key = cstirng_to_string(_secret_key);
-    let b_key = &(hex_decode(secret_key).unwrap());
-    let signing_key = match SigningKey::from_bytes(b_key) {
-        Ok(signing_key) => signing_key,
-        Err(_e) => return false,
+    let str_verifying_key: String = cstirng_to_string(_verifying_key);
+    let b_key: &Vec<u8> = &(hex_decode(str_verifying_key).unwrap());
+    let slice_b_key: &[u8] = b_key.as_slice();
+    let verifying_key: VerifyingKey<Nist256> = match VerifyingKey::from_sec1_bytes(slice_b_key) {
+        Ok(verifying_key: VerifyingKey<Nist256>) => verifying_key,
+        Err(_e: Error) => return false,
     };
 
-    let msg = cstirng_to_string(_msg);
-    let b_msg = msg.as_bytes();
+    let msg: String = cstirng_to_string(_msg);
+    let b_msg: &[u8] = msg.as_bytes();
 
-    let str_signature = cstirng_to_string(_signature);
-
-    let vec_signature = hex_decode(str_signature).unwrap();
-    let b_signature = vec_signature.as_slice();
-    let signature = match Signature::try_from(b_signature) {
-        Ok(signature) => signature,
-        Err(_e) => return false,
+    let str_signature: String = cstirng_to_string(_signature);
+    let vec_signature: Vec<u8> = hex_decode(str_signature).unwrap();
+    let b_signature: &[u8] = vec_signature.as_slice();
+    let signature: : Signature<Nist256> = match Signature::try_from(b_signature) {
+        Ok(signature: Signature<Nist256>) => signature,
+        Err(_e: Error) => return false,
     };
-
-    let verifying_key = VerifyingKey::from(&signing_key); // Serialize with `::to_encoded_point()`
 
     verifying_key.verify(b_msg, &signature).is_ok()
 }
@@ -894,16 +907,21 @@ pub extern "C" fn verify_sign(
 
 #### Nim側
 ```nim:rustlib.nim
-proc signMessageLib(msg, key:cstring):cstring {.dynlib:libpath, importc:"sign_message".}
-proc signMessage*(msg, key:string):string =
-  let key = key[2..^1] # 先頭の0xを削除
-  return "0x" & $signMessageLib(msg.cstring, key.cstring)
+proc createVerifyingKeyLib(secret:cstring):cstring {.dynlib:libpath, importc:"create_verifying_key".}
+proc createVerifyingKey*(secret:string):string =
+  let secret = secret[2..^1] # 先頭の0xを削除
+  "0x" & $createVerifyingKeyLib(secret.cstring)
 
-proc verifySignLib(key, msg, signature:cstring):bool {.dynlib: libpath, importc:"verify_sign".}
-proc verifySign*(key, msg, signature:string):bool =
-  let key = key[2..^1 ]# 先頭の0xを削除
+proc signMessageLib(key, msg:cstring):cstring {.dynlib:libpath, importc:"sign_message".}
+proc signMessage*(key, msg:string):string =
+  let key = key[2..^1] # 先頭の0xを削除
+  return "0x" & $signMessageLib(key.cstring, msg.cstring)
+
+proc verifySignLib(verifyKey, msg, signature:cstring):bool {.dynlib: libpath, importc:"verify_sign".}
+proc verifySign*(verifyKey, msg, signature:string):bool =
+  let verifyKey = verifyKey[2..^1 ]# 先頭の0xを削除
   let signature = signature[2..^1] # 先頭の0xを削除
-  return verifySignLib(key.cstring, msg.cstring, signature.cstring)
+  return verifySignLib(verifyKey.cstring, msg.cstring, signature.cstring)
 ```
 
 ```nim:nimapp.nim
@@ -912,69 +930,78 @@ import ./rustlib
 
 
 suite "crypto":
+  test "verifying key":
+    let secret = createSecretKeyHex()
+    echo "=== secret key"
+    echo secret
+    echo "=== verify key"
+    echo createVerifyingKey(secret)
+
   test "sign message":
     let msg = "Hello World"
-    let key = createSecretKeyHex()
-    echo "=== key"
-    echo key
-    let signature = signMessage(msg, key)
+    let secretKey = createSecretKeyHex()
+    let signature = signMessage(secretKey, msg)
     echo "=== signature"
     echo signature
-    let isValid = verifySign(key, msg, signature)
+    let verifyKey = createVerifyingKey(secretKey)
+    echo "=== verify key"
+    echo verifyKey
+    let isValid = verifySign(verifyKey, msg, signature)
     echo "=== expect true"
     echo isValid
     check isValid
 
   test "wrong message":
     let msg = "Hello World"
-    let key = createSecretKeyHex()
-    echo "=== key"
-    echo key
-    let signature = signMessage(msg, key)
+    let secret = createSecretKeyHex()
+    let signature = signMessage(secret, msg)
     echo "=== signature"
     echo signature
-
-    var expectWrong = verifySign(key, "wrong", signature)
+    let verifyKey = createVerifyingKey(secret)
+    echo "=== verify key"
+    echo verifyKey
+    let res = verifySign(verifyKey, "wrong hello", signature)
     echo "=== expect false"
-    echo expectWrong
-    check expectWrong == false
+    echo res
+    check res == false
 
   test "wrong signature":
     let msg = "Hello World"
-    let key = createSecretKeyHex()
-    echo "=== key"
-    echo key
-    let signature = signMessage(msg, key)
+    let secret = createSecretKeyHex()
+    let signature = signMessage(secret, msg)
     echo "=== signature"
     echo signature
-
     var expectWrong = verifySign("0x012345abcdef", msg, signature)
     echo "=== expect false"
     echo expectWrong
     check expectWrong == false
 ```
 
-```output
-=== key
-0xa9901bb411cf0af4cf10df0a813adfb3506e80629a851ab9f9685b65dad1fc7c
+```sh:output
+=== secret key
+0x61ee88fb30fe88e1bd0bafae57f78811c678b58a55401c5e64c714f8907da3a6
+=== verify key
+0x035C687146BF98F3935AA4E0B267522765ED7C15B17FC08372E115869D92922615
+  [OK] verifying key
+
 === signature
-0xe6b7ec44db67dae064601cb1f82afb56378eb7e625cdb07d2954c0e031e8ddf54b9412e2532c433bf8b896e64ce80e15d8489033ebe5a10d0e7836e5ec14c932
+0xf1f6bbe1345faaa3c3514b6ca01324602d9ab0344b38439574fda2b70a3c092462ffef099a068126aa8764637f9efce89554a94018f7c56d2f26210b120da33d
+=== verify key
+0x03EB937AF6C821116418A7BEF874974BED79ED43AC39B2D5CE28802C1971AC3BBC
 === expect true
 true
   [OK] sign message
 
-=== key
-0xc462e8b6fdb971b0609dee9add85ee98617ee9a01b82e729db5db01d490d0a55
 === signature
-0x681d68b2bd942b3e74dbebc62d97de6a7990dbd5d36b42fa56e9e0b39304fe1e626b15ca707f0ce69f8f6a922a87e1dd927505f78e37a226aa00af1dfcda9d08
+0x606bb9b3b9094057aadc2f4563923fdfc6d4a73f6991e530e3e60fc346c2d4245c2544be8dabb0535fe8cab0b8119b8920cf89a44e5f518bbe4f5c86b435be5a
+=== verify key
+0x0253FF110C708A36E15F18B4784E48473B3EC74485CD1E6D0AA989580CEF4F65CF
 === expect false
 false
   [OK] wrong message
 
-=== key
-0xdbf3a728f41228651d13e81d80d903f0e1c02f650a5df8d4e696da3c0de0cfbc
 === signature
-0xf221f562c98be9a21e65bba010b17203f530d0be964dbb5f1c376956602298b3e4564d4baf24cdfb27f2090a496f60ab246b68b0e6736b430433e1fb5d17ec5f
+0xb83a17ac892234b3b840c8d45cd2a8e1d4b68601d2a3dc52cad4fa86c13116150cc8288b0ffed750e0af45cd8d600875b06b1db0c4f7077828927b3d34155433
 === expect false
 false
   [OK] wrong signature
