--- a/articles/3db2134ff88763.md
+++ b/articles/3db2134ff88763.md
@@ -10,7 +10,7 @@ published: true
 
 ## モチベーション
 NimはPythonのような簡単な文法で、C言語にトランスパイルしバイナリにコンパイルすることで、学習コストの低さ、開発の生産性の高さ、実行速度の速さを兼ね揃えたプログラミング言語です。
-所有権・借用に基づくスコープベースでの安全なメモリ管理をコンパイラが自動で行い、Go言語のように参照やポインタについて考える必要もないため、特にアプリケーション開発において「コーディングのためのコーディング」を減らせてその記述をビジネスロジックだけに集中させることができます。
+所有権・借用に基づくスコープベースでの安全なメモリ管理をコンパイラが自動で行い、参照やポインタについて考える必要もないため、特にアプリケーション開発において「コーディングのためのコーディング」を減らせてその記述をビジネスロジックだけに集中させることができます。
 しかしまだ普及しているとは言い難く、使わない人の意見を聞くと「ライブラリが少ない」という理由を多く聞きます。
 Nimはコンパイル時に一旦C言語に変換するために、既にC言語で存在している資産を簡単に取り込むことができ、動的リンク・静的アーカイブ両方と非常にシームレスに連携することができます。
 
