--- a/articles/3db2134ff88763.md
+++ b/articles/3db2134ff88763.md
@@ -896,7 +896,7 @@ pub extern "C" fn verify_sign(
     let str_signature: String = cstirng_to_string(_signature);
     let vec_signature: Vec<u8> = hex_decode(str_signature).unwrap();
     let b_signature: &[u8] = vec_signature.as_slice();
-    let signature: : Signature<Nist256> = match Signature::try_from(b_signature) {
+    let signature: Signature<Nist256> = match Signature::try_from(b_signature) {
         Ok(signature: Signature<Nist256>) => signature,
         Err(_e: Error) => return false,
     };
@@ -910,7 +910,7 @@ pub extern "C" fn verify_sign(
 proc createVerifyingKeyLib(secret:cstring):cstring {.dynlib:libpath, importc:"create_verifying_key".}
 proc createVerifyingKey*(secret:string):string =
   let secret = secret[2..^1] # 先頭の0xを削除
-  "0x" & $createVerifyingKeyLib(secret.cstring)
+  return "0x" & $createVerifyingKeyLib(secret.cstring)
 
 proc signMessageLib(key, msg:cstring):cstring {.dynlib:libpath, importc:"sign_message".}
 proc signMessage*(key, msg:string):string =
