GCなしのNim公開

--- a/articles/af2b2b9f8fd890.md
+++ b/articles/af2b2b9f8fd890.md
@@ -2,7 +2,7 @@
 title: "Nimのメモリ管理を理解する② ― Nimのムーブセマンティクス"
 emoji: "👑"
 type: "idea" # tech: 技術記事 / idea: アイデア
-topics: ["nim"]
+topics: ["nim", "GC", "メモリ管理"]
 published: true
 ---
 
@@ -17,6 +17,7 @@ https://www.youtube.com/watch?v=yA32Wxl59wo
 〜Nimのメモリ管理を理解するシリーズ〜
 - [Nimのメモリ管理を理解する① ― Nimの新しいGC、ARCについて](https://qiita.com/dumblepy/items/be660c17556d73aa3570)
 - [Nimのメモリ管理を理解する② ― Nimのムーブセマンティクス](https://zenn.dev/dumblepy/articles/af2b2b9f8fd890)
+- [Nimのメモリ管理を理解する③ ― GCなしのNim](https://zenn.dev/dumblepy/articles/0dcbc08aed1a25)
 
 ---
 
