--- a/articles/efffa86d9177b1.md
+++ b/articles/efffa86d9177b1.md
@@ -14,7 +14,8 @@ https://nim-lang.org/blog/2020/12/08/introducing-orc.html
 
 〜Nimのメモリ管理を理解するシリーズ〜
 - [Nimのメモリ管理を理解する① ― Nimの新しいGC、ARCについて](https://qiita.com/dumblepy/items/be660c17556d73aa3570)
-- [Nimのメモリ管理を理解する② ― Nimでのムーブセマンティクス](https://zenn.dev/articles/0b77f342dd9f15)
+- [Nimのメモリ管理を理解する② ― Nimのムーブセマンティクス](https://zenn.dev/dumblepy/articles/af2b2b9f8fd890)
+- [Nimのメモリ管理を理解する③ ― GCなしのNim](https://zenn.dev/dumblepy/articles/0dcbc08aed1a25.md)
 
 ---
 
